# motion-microswimmers-simulation

./: .gitignore  Makefile  README.md  bacterium.cpp  callgrind.out.19501  definition.h  diskWall.cpp  initializer.py  main.cpp  meson.build  plotter.py  probability_map.csv  radial_probability.csv  simulation  simulation.cpp  simulation.h  visualization.cpp  visualization.h
output/: r_100_radial_probability.csv  r_125_radial_probability.csv  r_150_radial_probability.csv  r_250_probability_map.csv  r_250_radial_probability.csv  r_25_radial_probability.csv  r_500_probability_map.csv  r_500_radial_probability.csv  r_50_radial_probability.csv  r_75_radial_probability.csv  r_boh_probability_map.csv  r_boh_radial_probability.csv
param/: article_article_physics_parameters.json  article_physics_parameters.json  article_physics_parameters_diffusion.json  full_physics_parameters.1.json  full_physics_parameters.2.json  full_physics_parameters.json  full_physics_parameters_diffusion.json  physics_parameters.json  simulation_parameters.json  simulation_parameters_diffusion.json
src/: actor.cpp  actor.hpp  analyzer.cpp  analyzer.h  analyzer.hpp  bacterium.cpp  bacterium.h  bacterium.hpp  cell.cpp  cell.hpp  definition.h  definition.hpp  diskWall.cpp  diskWall.h  diskWall.hpp  main.cpp  map.cpp  map.hpp  simulation.cpp  simulation.h  simulation.hpp  visualization.cpp  visualization.h  visualization.hpp  wallBottom.cpp  wallBottom.hpp  wallDisk.cpp  wallDisk.hpp  wallLeft.cpp  wallLeft.hpp  wallRight.cpp  wallRight.hpp  wallTop.cpp  wallTop.hpp
